# plustache

./: CMakeLists.txt
src/: CMakeLists.txt  main.cpp  template.cpp
tests/: CMakeLists.txt  test_change_delimiter.cpp  test_collections_plustache.cpp  test_html_escape_plustache.cpp  test_inverted_sections.cpp  test_multiple_plustache.cpp  test_nested_sections_plustache.cpp  test_partials_plustache.cpp  test_sections_plustache.cpp  test_simple_plustache.cpp
